--- a/r8ted.client/package.json
+++ b/r8ted.client/package.json
@@ -24,10 +24,13 @@
     "@rushstack/eslint-patch": "^1.3.0",
     "@vue/cli-plugin-eslint": "5.0.8",
     "@vue/eslint-config-standard": "^8.0.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-vue": "^9.14.1",
+    "postcss": "^8.4.27",
     "sass": "1.62.1",
+    "tailwindcss": "^3.3.3",
     "vite": "4.3.9"
   }
 }
