fixed account error

--- a/r8ted/appsettings.json
+++ b/r8ted/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "CONNECTION_STRING": "",
-  "AUTH0_DOMAIN": "",
-  "AUTH0_AUDIENCE": ""
+  "CONNECTION_STRING": "server=db.nyeqhhceyqwslfutdylj.supabase.co;port=5432;database=postgres;user id=postgres;password=mebryx-defviw-3dAsre;",
+  "AUTH0_DOMAIN": "swanky.us.auth0.com",
+  "AUTH0_AUDIENCE": "https://swanky.com"
 }
