--- a/r8ted.client/package.json
+++ b/r8ted.client/package.json
@@ -12,11 +12,11 @@
     "@mdi/font": "7.2.96",
     "@popperjs/core": "2.11.8",
     "@vitejs/plugin-vue": "^4.2.3",
-    "axios": "1.4.0",
+    "axios": "^1.6.8",
     "bootstrap": "5.3.0",
     "interactjs": "^1.10.17",
     "socket.io-client": "4.6.2",
-    "sweetalert2": "11.7.10",
+    "sweetalert2": "^11.6.13",
     "vue": "3.3.4",
     "vue-router": "4.2.2"
   },
@@ -31,6 +31,6 @@
     "postcss": "^8.4.27",
     "sass": "1.62.1",
     "tailwindcss": "^3.3.3",
-    "vite": "4.3.9"
+    "vite": "^4.5.2"
   }
 }
